--- a/src/testdata/html/bobsmith.html
+++ b/src/testdata/html/bobsmith.html
@@ -1,12 +1,14 @@
 <html>
-<head>
-<title>Bob Smith</title>
-<link href="mailto:pelle@neuclear.org" type="neu:receiver"/>
-</head>
-<body>
-<h1 id="name">Bob Smith</h1>
-<p>
+    <head>
+        <title>Bob Smith</title>
+        <link href="mailto:pelle@neuclear.org" rel="neu:receiver"/>
+        <link href="http://logger.neuclear.org" rel="neu:logger"/>
+        <meta name="neu:type" content="Identity"/>
+    </head>
+    <body>
+        <h1 id="name">Bob Smith</h1>
+        <p>
 Hi I am Bob.
-</p>
-</body>
+        </p>
+    </body>
 </html>
